--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Link CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -31,7 +32,8 @@
 </main>
 
 <!-- Link JavaScript -->
-<script src="js/main.js"></script>
+<script src="main.js"></script>
+
 
 </body>
 </html>
