--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Smart Pantry Architect</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="style.css">
-
+    <title>Smart Pantry Architect</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -31,10 +28,7 @@
     </section>
 </main>
 
-<!-- Link JavaScript -->
 <script src="js/main.js"></script>
-
-
-
 </body>
 </html>
+
